# PyMines

./: .gitignore  MANIFEST.in  README.md  mines.py  setup.cfg  setup.py
pymines/: pymines.py
