[metadata]
name = PyMines
version = 1.2.3
author = Vilsol
author_email = me@vil.so

url = https://github.com/Vilsol/PyMines

description = Very simple minesweeper game
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true

[options.entry_points]
console_scripts =
    pymines = pymines.pymines:execute
